# sharing_things

./: README.md  pyproject.toml  requirements.txt
ads/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_exchangeproposal_owner.py
ads/templates/: ad.html  ad_form.html  ads.html  ads_search.html  base.html  confirm-delete.html  exchange_proposal_form.html  exchange_proposals.html  exchange_proposals1.html  home.html
ads/templates/includes/: footer.html  navbar.html  pagination.html
config/: settings.py  urls.py
static/css/: styles.css
tests/: test_views.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html  personal_account.html  user_form.html
